# zkMIPS

./: Cargo.toml
crates/core/executor/: Cargo.toml
crates/core/executor/src/: air.rs  context.rs  dependencies.rs  executor.rs  hook.rs  memory.rs  record.rs
crates/core/executor/src/artifacts/: mips_costs.json
crates/core/executor/src/syscalls/: code.rs  commit.rs  context.rs  deferred.rs  halt.rs  hint.rs  mod.rs  unconstrained.rs  verify.rs  write.rs
crates/core/machine/: Cargo.toml
crates/core/machine/src/: lib.rs  programs.rs
crates/core/machine/src/bytes/: columns.rs  mod.rs  trace.rs
crates/core/machine/src/cpu/: trace.rs
crates/core/machine/src/global/: mod.rs
crates/core/machine/src/memory/: global.rs  local.rs
crates/core/machine/src/mips/: mod.rs
crates/core/machine/src/operations/: global_lookup.rs  mod.rs
crates/core/machine/src/program/: mod.rs
crates/core/machine/src/runtime/: syscall.rs
crates/cuda/: Cargo.toml
crates/cuda/src/: lib.rs
crates/curves/: Cargo.toml
crates/curves/src/: lib.rs
crates/curves/src/edwards/: ed25519.rs
crates/curves/src/weierstrass/: bls12_381.rs  secp256k1.rs  secp256r1.rs
crates/derive/src/: lib.rs
crates/p3-sect-fr/src/: poseidon2.rs
crates/prover/: Cargo.toml  trusted_setup.sh
crates/prover/src/: build.rs  lib.rs  types.rs
crates/recursion/circuit/src/: challenger.rs  hash.rs  lib.rs
crates/recursion/compiler/: Cargo.toml
crates/recursion/core/: Cargo.toml
crates/recursion/core/src/: lib.rs  machine.rs
crates/recursion/gnark-ffi/: Cargo.toml  build.rs
crates/recursion/gnark-ffi/assets/: groth16_witness.json
crates/recursion/gnark-ffi/go/: go.mod  main.go
crates/recursion/gnark-ffi/src/: dvsnark_bn254.rs  groth16_bn254.rs  lib.rs  proof.rs  sect_wit_gen.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: action.rs  lib.rs  proof.rs  utils.rs
crates/sdk/src/network/: prover.rs
crates/sdk/src/proto/: stage.proto
crates/sdk/src/provers/: cpu.rs  cuda.rs  mock.rs  mod.rs
crates/stark/: Cargo.toml
crates/stark/src/: chip.rs  machine.rs  opts.rs  prover.rs  septic_curve.rs  zerofier_coset.rs
crates/stark/src/air/: builder.rs  machine.rs
crates/stark/src/lookup/: debug.rs
crates/stark/src/shape/: mod.rs
crates/test-artifacts/guests/: Cargo.toml
crates/test-artifacts/guests/aes128/: Cargo.toml
crates/test-artifacts/src/: lib.rs
crates/verifier/src/plonk/: hash_to_field.rs
crates/zkvm/lib/src/: aes128.rs  boolean_circuit_garble.rs  ciphertext_check.rs  lib.rs  xor3_128.rs
docs/src/design/: design.md  memory-checking.md
docs/src/dev/: patched-crates.md  precompiles.md  proof-aggregation.md  verifier.md
docs/src/introduction/: quickstart.md
docs/src/mips-vm/: mips-isa.md
examples/: Cargo.toml
examples/aes128/guest/: Cargo.toml
examples/aes128/guest/src/: main.rs
examples/aes128/host/: Cargo.toml
examples/aes128/host/src/: main.rs
examples/aggregation/guest/: Cargo.toml
examples/aggregation/guest/src/: main.rs
examples/aggregation/host/: Cargo.toml
examples/aggregation/host/src/: main.rs
examples/keccak-precompile/host/: Cargo.toml
examples/keccak-precompile/host/src/: main.rs
examples/large-sum/host/: Cargo.toml
examples/rsa/guest/: Cargo.toml
examples/rsa/host/: Cargo.toml
examples/rsa/host/src/: main.rs
examples/rsa/host/src/keys/: rsa2048-priv-17.der  rsa2048-priv-257.der  rsa2048-pub-17.der  rsa2048-pub-257.der
examples/xor3128/guest/: Cargo.toml
examples/xor3128/guest/src/: main.rs
examples/xor3128/host/: Cargo.toml
examples/xor3128/host/src/: main.rs
(+135 files in other folders)
