[package]
name = "aggregation"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
sha2 = "0.10.8"
zkm-zkvm = { path = "../../../crates/zkvm/entrypoint", features = ["verify"] }
k256 = { git = "https://github.com/zkMIPS-patches/elliptic-curves.git", branch = "patch-k256-0.13.4",  features = [
  "ecdsa",
  "arithmetic",
  "serde",
  "expose-field",
  "std",
], default-features = false }
serde = { version = "1.0" , features = ["derive"]}